--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="profile">
         <img src="images/IMG_0322.jpeg" alt="Elsa"  width="200px">
         <h2>Hello.</h2>
-        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class="Elsa is a character. She has wonky legs and is a bit fiesty, but loves a cuddle</p>
       </div>
       <hr>
       <div class="skills">
